--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Simple landing page example">
-    <title>Landing Page</title>
+    <title>Jaime Tijerina</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -55,18 +55,18 @@
 <body>
 
 <header>
-    <h1>Welcome to Our Service</h1>
+    <h1>Welcome to Jaime Tijerina's home page on the world wide web.</h1>
     <p>Your one-stop solution for everything!</p>
 </header>
 
 <div class="content">
     <h2>What We Offer</h2>
     <p>We provide high-quality services that are tailored to your needs. Discover more and get started today.</p>
-    <button class="cta" onclick="alert('You clicked the call to action!')">Get Started Now</button>
+    <button class="cta" onclick="alert('We are not ready to receive new requests!')">Get Started Now</button>
 </div>
 
 <footer>
-    <p>&copy; 2025 Your Company. All Rights Reserved.</p>
+    <p>&copy; 2025 Jaime Tijerina. All Rights Reserved.</p>
 </footer>
 
 </body>
